data/rq2/deepseek/intermediate/zopfli/workspace/final_projects/zopfli/translate_by_qwen3_coder/preprocessed_header.h

typedef long unsigned int size_t;
typedef struct ZopfliLongestMatchCache {
  unsigned short* length;
  unsigned short* dist;
  unsigned char* sublen;
} ZopfliLongestMatchCache;
typedef struct ZopfliHash {
  int* head;
  unsigned short* prev;
  int* hashval;
  int val;
  int* head2;
  unsigned short* prev2;
  int* hashval2;
  int val2;
  unsigned short* same;
} ZopfliHash;
typedef struct ZopfliOptions {
  int verbose;
  int verbose_more;
  int numiterations;
  int blocksplitting;
  int blocksplittinglast;
  int blocksplittingmax;
} ZopfliOptions;
typedef struct ZopfliLZ77Store {
  unsigned short* litlens;
  unsigned short* dists;
  size_t size;
  const unsigned char* data;
  size_t* pos;
  unsigned short* ll_symbol;
  unsigned short* d_symbol;
  size_t* ll_counts;
  size_t* d_counts;
} ZopfliLZ77Store;
void ZopfliInitLZ77Store(const unsigned char* data, ZopfliLZ77Store* store);
void ZopfliCleanLZ77Store(ZopfliLZ77Store* store);
void ZopfliCopyLZ77Store(const ZopfliLZ77Store* source, ZopfliLZ77Store* dest);
void ZopfliStoreLitLenDist(unsigned short length, unsigned short dist,
                           size_t pos, ZopfliLZ77Store* store);
void ZopfliAppendLZ77Store(const ZopfliLZ77Store* store,
                           ZopfliLZ77Store* target);
size_t ZopfliLZ77GetByteRange(const ZopfliLZ77Store* lz77,
                              size_t lstart, size_t lend);
void ZopfliLZ77GetHistogram(const ZopfliLZ77Store* lz77,
                            size_t lstart, size_t lend,
                            size_t* ll_counts, size_t* d_counts);
typedef struct ZopfliBlockState {
  const ZopfliOptions* options;
  ZopfliLongestMatchCache* lmc;
  size_t blockstart;
  size_t blockend;
} ZopfliBlockState;
void ZopfliInitBlockState(const ZopfliOptions* options,
                          size_t blockstart, size_t blockend, int add_lmc,
                          ZopfliBlockState* s);
void ZopfliCleanBlockState(ZopfliBlockState* s);
void ZopfliFindLongestMatch(
    ZopfliBlockState *s, const ZopfliHash* h, const unsigned char* array,
    size_t pos, size_t size, size_t limit,
    unsigned short* sublen, unsigned short* distance, unsigned short* length);
void ZopfliVerifyLenDist(const unsigned char* data, size_t datasize, size_t pos,
                         unsigned short dist, unsigned short length);
void ZopfliLZ77Greedy(ZopfliBlockState* s, const unsigned char* in,
                      size_t instart, size_t inend,
                      ZopfliLZ77Store* store, ZopfliHash* h);