data/rq2/deepseek/intermediate/zopfli/workspace/final_projects/zopfli/translate_by_qwen3_coder/.c2r_bindgen_fns/lz77_b5d5baf1.fns.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn ZopfliInitLZ77Store(data: *const ::core::ffi::c_uchar, store: *mut ZopfliLZ77Store);
}
unsafe extern "C" {
    pub fn ZopfliCleanLZ77Store(store: *mut ZopfliLZ77Store);
}
unsafe extern "C" {
    pub fn ZopfliCopyLZ77Store(source: *const ZopfliLZ77Store, dest: *mut ZopfliLZ77Store);
}
unsafe extern "C" {
    pub fn ZopfliStoreLitLenDist(
        length: ::core::ffi::c_ushort,
        dist: ::core::ffi::c_ushort,
        pos: size_t,
        store: *mut ZopfliLZ77Store,
    );
}
unsafe extern "C" {
    pub fn ZopfliAppendLZ77Store(store: *const ZopfliLZ77Store, target: *mut ZopfliLZ77Store);
}
unsafe extern "C" {
    pub fn ZopfliLZ77GetByteRange(
        lz77: *const ZopfliLZ77Store,
        lstart: size_t,
        lend: size_t,
    ) -> size_t;
}
unsafe extern "C" {
    pub fn ZopfliLZ77GetHistogram(
        lz77: *const ZopfliLZ77Store,
        lstart: size_t,
        lend: size_t,
        ll_counts: *mut size_t,
        d_counts: *mut size_t,
    );
}
unsafe extern "C" {
    pub fn ZopfliInitBlockState(
        options: *const ZopfliOptions,
        blockstart: size_t,
        blockend: size_t,
        add_lmc: ::core::ffi::c_int,
        s: *mut ZopfliBlockState,
    );
}
unsafe extern "C" {
    pub fn ZopfliCleanBlockState(s: *mut ZopfliBlockState);
}
unsafe extern "C" {
    pub fn ZopfliFindLongestMatch(
        s: *mut ZopfliBlockState,
        h: *const ZopfliHash,
        array: *const ::core::ffi::c_uchar,
        pos: size_t,
        size: size_t,
        limit: size_t,
        sublen: *mut ::core::ffi::c_ushort,
        distance: *mut ::core::ffi::c_ushort,
        length: *mut ::core::ffi::c_ushort,
    );
}
unsafe extern "C" {
    pub fn ZopfliVerifyLenDist(
        data: *const ::core::ffi::c_uchar,
        datasize: size_t,
        pos: size_t,
        dist: ::core::ffi::c_ushort,
        length: ::core::ffi::c_ushort,
    );
}
unsafe extern "C" {
    pub fn ZopfliLZ77Greedy(
        s: *mut ZopfliBlockState,
        in_: *const ::core::ffi::c_uchar,
        instart: size_t,
        inend: size_t,
        store: *mut ZopfliLZ77Store,
        h: *mut ZopfliHash,
    );
}
